--- a/HTML/CSS/Login.css
+++ b/HTML/CSS/Login.css
@@ -1,6 +1,11 @@
-body {
-    
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+
+
 
 a {
     text-decoration: none !important;
@@ -11,14 +16,9 @@ h2,
 h3 {
     font-family: 'Kaushan Script', cursive;
 }
-.images{
-    padding-left: 0% !important;
-    padding-right: 0% !important;
-}
 
-/* .myform {
+.myform {
     position: relative;
-    width: 100%;
     display: -ms-flexbox;
     display: flex;
     padding: 1rem;
@@ -28,9 +28,10 @@ h3 {
     pointer-events: auto;
     background-color: #fff;
     background-clip: padding-box;
+    border: 0px solid rgba(0, 0, 0, .2);
+    border-radius: 1.1rem;
     outline: 0;
-    max-width: 500px;
-} */
+}
 
 .tx-tfm {
     text-transform: uppercase;
@@ -83,85 +84,23 @@ form .error {
     display: none;
 }
 
-.email{
-    /* padding-top: 30%; */
-    padding-bottom: 1%;
-    text-align: left;
-    letter-spacing: 0px;
-    color: #414141;
-}
-#email{
-
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 0px 0px 10px #2B64B11F;
-    border: 1px solid #2B64B1;
-    border-radius: 3px;
-}
-.password{
-    padding-top: 3%;
-    padding-bottom: 1%;
-    text-align: left;
-    letter-spacing: 0px;
-    color: #414141;
-}
-#password{
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 0.97px 0.26px 3px #0000000D;
-    border: 1px solid #D9D9D9;
-    border-radius: 3px;
-}
-.login{
-    margin-top: 6%;
-    width: 100%;
-    /* UI Properties */
-    background: #F8863400 0% 0% no-repeat padding-box;
-    border: 2px solid #F88634 !important;
-    border-radius: 24px !important;
-}
-#login{
-    color: #F88634;
-}
-.btn{
-    background-color: #FFFFFF !important;
-}
-.lostpassword{
-    padding-top: 4%;
-    margin-bottom: -2%;
-    width: 100%;
-    /* UI Properties */
+.privacylogin {
+    margin-top: 25%;
+    display: flex;
+    justify-content: center;
     text-align: center;
-    letter-spacing: 0px;
-    color: #414141;
-    font-size: 14px;
 }
-.last{
-    width: 100%;
-    /* UI Properties */
-    text-align: left;
-    letter-spacing: 0px;
-    color: #414141;
-    font-size: 14px;
-}
-#signup{
-    font-size: 14px;
-    width: 115px;
-    height: 19px;
-    /* UI Properties */
-    text-align: left;
-    letter-spacing: 0px;
-    color: #2B64B1;
+
+.size-fix {
+    height: 100vh;
 }
 
 
-@media screen and (max-width: 768px)
-{
-    .email{
-        padding-top: 0%;
-        text-align: center;
-        letter-spacing: 0px;
-        color: #414141;
+@media screen and (max-width:767px) {
+    .size-fix {
+        height: auto;
     }
-    .images{
-        padding-bottom: 2%;
+    .myform{
+        padding-top: 0;
     }
 }
