--- a/HTML/CSS/Login.css
+++ b/HTML/CSS/Login.css
@@ -39,6 +39,20 @@ h3 {
 
 .mybtn {
     border-radius: 50px;
+    width: 70%;
+    margin-left: 15%;
+}
+.box{
+    font-size: 1rem; 
+    color: #8d8a8a; 
+    padding-left: 17%; 
+    padding-bottom: 1%;
+}
+.form-control{
+    line-height: 0;
+    width: 70%;
+    margin-left: 15%;
+    padding-top: 0.3% !important;
 }
 
 .login-or {
@@ -103,4 +117,27 @@ form .error {
     .myform{
         padding-top: 0;
     }
+
+        .size-fix {
+            height: auto;
+        }
+        .mybtn {
+            border-radius: 50px;
+            width: 90%;
+            margin-left: 5%;
+        }
+        .box{
+            font-size: 1rem; 
+            color: #8d8a8a; 
+            padding-left: 6%; 
+            padding-bottom: 1%;
+        }
+        
+    .form-control{
+        line-height: 0;
+        width: 90%;
+        margin-left: 5%;
+        padding-top: 0.3% !important;
+    }
+    
 }
