--- a/HTML/CSS/ForgotPass.css
+++ b/HTML/CSS/ForgotPass.css
@@ -37,6 +37,20 @@ h3 {
 
 .mybtn {
     border-radius: 50px;
+    width: 70%;
+    margin-left: 15%;
+}
+.box{
+    font-size: 1rem; 
+    color: #8d8a8a; 
+    padding-left: 17%; 
+    padding-bottom: 1%;
+}
+.form-control{
+    line-height: 0;
+    width: 70%;
+    margin-left: 15%;
+    padding-top: 0.3% !important;
 }
 
 .login-or {
@@ -91,9 +105,39 @@ form .error {
 .size-fix {
     height: 100vh;
 }
+.box1{
+    padding: 5%; 
+    font-size: 14px;
+}
 
 @media screen and (max-width:767px) {
     .size-fix {
         height: auto;
     }
+    .myform{
+        padding-top: 0;
+    }
+
+        .size-fix {
+            height: auto;
+        }
+        .mybtn {
+            border-radius: 50px;
+            width: 90%;
+            margin-left: 5%;
+        }
+        .box{
+            font-size: 1rem; 
+            color: #8d8a8a; 
+            padding-left: 6%; 
+            padding-bottom: 1%;
+        }
+        
+    .form-control{
+        line-height: 0;
+        width: 90%;
+        margin-left: 5%;
+        padding-top: 0.3% !important;
+    }
+    
 }
