--- a/HTML/CSS/HomeList.css
+++ b/HTML/CSS/HomeList.css
@@ -235,16 +235,208 @@
     border-bottom: 1px solid #333333;
     border-top: 0.2px solid #333333;
 }
+.gridimg{
+    border: 0;
+    background-color:white ;
+    border-radius: 25px;
+    height: 35px;
+    width: 35px;
+}
+.gridimg img{
+    height: 25px;
+    width: 25px;
+       
+}
+.listimg{
+    border: 0;
+    background-color: #E8E8E8;
+    border-radius: 25px;
+    height: 35px;
+    width: 35px;
+}
+.listimg img{
+    height: 20px;
+    width: 20px;
+       
+}
+.sortbybutton{
+    border: 1px solid #333333;
+    margin-right: 4%;
+    border-radius: 5px;
+}
+.locationBox {
+    color: white;
+    border-radius: 25px;
+    background-color: black;
+    opacity: 0.5;
+    right: 67%;
+    top: 3%;
+    height: 20px;
+    font-size: 10px;
+}
+
+.locationBox .locicon {
+    margin-top: 3px;
+    margin-left: 10px;
+}
+
+.locationBox p {
+    margin-top: 3px;
+    margin-right: 10px;
+}
+.likeBox {
+    color: white;
+    border-radius: 50px;
+    background-color: black;
+    opacity: 0.5;
+    right: 67%;
+    top: 33%;
+    height: 39px;
+    width: 39px;
+    padding: 1%;
+}
+
+.addBox {
+    color: white;
+    border-radius: 50px;
+    background-color: black;
+    opacity: 0.5;
+    right: 67%;
+    top: 57%;
+    height: 39px;
+    width: 39px;
+    padding: 1%;
+}
+.category {
+    background-color: rgb(255, 255, 255);
+    color: #333333;
+    border-radius: 25px;
+    padding: 0.4%;
+    max-width: fit-content;
+    top: 102%;
+    left: 18%;
+    transform: translate(-50%,-50%);
+}
+.header{
+    font-size: 12px;
+}
+.starbutton {
+    border: none !important;
+}
+.durationofmission {
+    background-color: rgb(255, 255, 255);
+    justify-content: center;
+    color: #333333;
+    min-width: max-content;
+    font-size: 10px;
+    border: 0.3px solid #333333;
+    border-radius: 25px;
+    padding: 1%;
+    position: absolute;
+    top: 74%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+}
+.durationofmission p{
+    margin: 0;
+}
+
+.lineintext {
+    display: flex;
+    flex-direction: row;
+    margin-top: -6%;
+
+}
+
+.lineintext:before,
+.lineintext:after {
+
+    content: "";
+    flex: 1 1;
+    border-bottom: 2px solid #000;
+    margin-top: 5%;
+    z-index: -1;
+}
+.cardfooterline {
+    border: 0.5px solid #333333;
+    margin-top: 3%;
+    margin-bottom: 0;
+}
+
+.apply{
+    width: 40%;
+    border: 1px solid #F88634;
+    color: #F88634;
+    background: white;
+    margin-top: 3%;
+    border-radius: 25px;
+    padding: 3%;
+    justify-content:space-around;
+}
+
+.cardtext1{
+    font-size: 20px;
+    margin-top: 10px;
+}
+.viewdetailslist{
+    border: 1px solid #F88634;
+    color: #F88634;
+    border-radius: 25px;
+    padding: 2%;
+    width: 21%;
+    justify-content: space-evenly;  
+}
+.fouricontext{
+    margin-left: 2%;
+    min-width: fit-content;
+    margin-top: 1%;
+}
+.fouricon{
+    margin-left: 2%;
+    
+}
+
+@media only screen and (max-width: 576px) {
+
+    .likeBox {
+        color: white;
+        border-radius: 25px;
+        background-color: black;
+        opacity: 0.5;
+        right: 4%;
+        top: 13%;
+        padding: 2%;
+    }
+
+    .addBox {
+        color: white;
+        border-radius: 25px;
+        background-color: black;
+        opacity: 0.5;
+        right: 4%;
+        top: 21%;
+        padding: 3%;
+        font-size: 18px;
+    }
+    .durationofmission {
+        min-width: max-content;
+    }
+    .locationBox {
+        color: white;
+        border-radius: 25px;
+        background-color: black;
+        opacity: 0.5;
+        right: 4%;
+        top: 3%;
+        height: 20px;
+        font-size: 10px;
+    }
+}
 
 
 @media only screen and (max-width: 767px) {
-    .rightbutton {
-        display: block !important;
-    }
-
-    .blocking {
-        display: none !important;
-    }
+    
 
     .searchiconB {
         display: none;
@@ -252,5 +444,99 @@
 
     .spacearound {
         justify-content: end;
+    }
+    
+    .category {
+        background-color: rgb(255, 255, 255);
+        color: #333333;
+        border-radius: 25px;
+        padding: 0.5%;
+        max-width: fit-content;
+        margin-left: 50%;
+        margin-top: -2%;
+    }
+
+    .likeBox {
+        color: white;
+        border-radius: 25px;
+        background-color: black;
+        opacity: 0.5;
+        right: 4%;
+        top: 23%;
+        padding: 2%;
+    }
+
+    .addBox {
+        color: white;
+        border-radius: 25px;
+        background-color: black;
+        opacity: 0.5;
+        right: 4%;
+        top: 35%;
+        padding: 3%;
+        font-size: 18px;
+    }
+    .durationofmission {
+        top: 72%;
+    }
+    .locationBox {
+        color: white;
+        border-radius: 25px;
+        background-color: black;
+        opacity: 0.5;
+        right: 4%;
+        top: 3%;
+        height: 20px;
+        font-size: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 992px) {
+    .rightbutton {
+        display: block !important;
+    }
+
+    .blocking {
+        display: none !important;
+    }
+    .locationBox {
+        color: white;
+        border-radius: 25px;
+        background-color: black;
+        opacity: 0.5;
+        right: 4%;
+        top: 3%;
+        height: 20px;
+        font-size: 10px;
+    }
+    .likeBox {
+        color: white;
+        border-radius: 25px;
+        background-color: black;
+        opacity: 0.5;
+        right: 4%;
+        top: 12%;
+        padding: 2%;
+    }
+
+    .addBox {
+        color: white;
+        border-radius: 25px;
+        background-color: black;
+        opacity: 0.5;
+        right: 4%;
+        top: 20%;
+        padding: 3%;
+        font-size: 18px;
+    }
+    .category {
+        background-color: rgb(255, 255, 255);
+        color: #333333;
+        border-radius: 25px;
+        padding: 0.5%;
+        max-width: fit-content;
+        margin-left: 50%;
+        margin-top: -2%;
     }
 }
