--- a/HTML/CSS/EditProfile.css
+++ b/HTML/CSS/EditProfile.css
@@ -80,12 +80,13 @@ body {
 }
 
 /**********************************************/
-.EPuserimg{
+.EPuserimg {
     border: 1px solid #D9D9D9;
     height: 30%;
     padding: 2%;
 }
-.EPuserimg img{
+
+.EPuserimg img {
     width: 100px;
     height: 100px;
     position: relative;
@@ -94,58 +95,71 @@ body {
 }
 
 
-.EDchangepass{
+.EDchangepass {
     text-decoration: none;
     font-size: 10px;
     border: none;
     background-color: white;
 }
-.EPbasicInfo{
+
+.EPbasicInfo {
     font-size: 18px;
     font-weight: 400;
-    border-bottom:0.5px solid #D9D9D9;
+    border-bottom: 0.5px solid #D9D9D9;
 }
 
-.EPbasicInfo p{
-    border-bottom:2px solid #D9D9D9;
+.EPbasicInfo p {
+    border-bottom: 2px solid #D9D9D9;
     max-width: fit-content;
     margin-bottom: 0;
 }
-.EPnameSurname span{
+
+.EPnameSurname span {
     font-size: 10px;
 }
-.form-control{
+
+.form-control {
     height: 27px !important;
 }
-.EPmyprofile{
+
+.EPmyprofile {
     height: 100px !important;
 }
 
-.EPmyprofile ::placeholder{
+.EPmyprofile ::placeholder {
     margin-top: 1% !important;
 }
-.EPddborder{
+
+.EPddborder {
     border: 1.5px solid #D9D9D9;
     width: 100%;
     height: 28px !important;
 }
-.EPddborder img{
-    height: 10px;
-    width: 10px;
+
+.EPddborder img {
+    height: 8px;
+    width: 12px;
 }
-.EPskills{
+
+.EPskills {
     border: 1.5px solid #D9D9D9;
 }
-.EPnameSurname textarea{
+
+.navbar-nav {
+    margin: 0 !important;
+}
+
+.EPnameSurname textarea {
     border: 1.5px solid #D9D9D9;
     border-radius: 4px;
     min-height: 100px;
     color: #757575;
     padding-left: 1%;
     font-size: 15px;
-    font-weight:lighter;
+    font-weight: lighter;
 }
-.EPmyskilltextarea{
+
+.EPmyskilltextarea {
     border: 1.5px solid #D9D9D9;
     border-radius: 4px;
     display: block;
@@ -156,50 +170,124 @@ body {
     color: #757575;
     background-color: #fff;
 }
-.EPmyskilltextarea ul{
+
+.EPmyskilltextarea select{
+    border: 0 !important;
+    width: 100% !important;
+}
+
+.EPmyskilltextarea ul {
     list-style: none;
     padding: 0;
 }
-.EPaddskill button{
+
+.EPaddskill button {
     font-size: 15px;
-    border:2px solid #757575;
+    border: 2px solid #757575;
     background-color: white;
     border-radius: 25px;
-    padding-left:2% ;
-    padding-top:0.5% ;
-    padding-right:2% ;
-    padding-bottom:0.5% ;
+    padding-left: 2%;
+    padding-top: 0.5%;
+    padding-right: 2%;
+    padding-bottom: 0.5%;
 }
-.EPsave button{
+
+.EPsave button {
     font-size: 12px;
     color: #F88634;
-    border:2px solid #F88634;
+    border: 2px solid #F88634;
     background-color: white;
     border-radius: 25px;
-    padding-left:3% ;
-    padding-top:1% ;
-    padding-right:3% ;
-    padding-bottom:1% ;
+    padding-left: 3%;
+    padding-top: 1%;
+    padding-right: 3%;
+    padding-bottom: 1%;
 }
-.EPfooterline{
-    border-bottom:0.5px solid #D9D9D9;
+
+.EPfooterline {
+    border-bottom: 0.5px solid #D9D9D9;
     margin-top: 50px;
 }
-.EPprivacypolicy{
+
+.EPprivacypolicy {
     font-size: 12px;
 }
-.modal-content{
+
+.modal-content {
     margin-top: 30% !important;
 }
 
-.modal-footer .cancel{
+.transferBtns {
+    margin: auto !important;
+}
+
+.modal-header {
+    border: none !important;
+}
+
+.modal-footer {
+    border: none !important;
+}
+
+.modal-body {
+    padding-top: 0 !important;
+}
+
+.modal-footer .cancel {
     border: 2px solid #333333;
     border-radius: 25px;
 }
-.modal-footer .changepass{
+
+.modal-footer .changepass {
     color: #F88634;
     border: 2px solid #F88634;
     border-radius: 25px;
+}
+
+.modal-dialog {
+    margin: 10px auto !important;
+}
+
+.allskills {
+    border: 1px solid #D9D9D9;
+}
+
+.selectedskills {
+    border: 1px solid #D9D9D9;
+}
+
+.leftrightarrow {
+
+    transform: translate(15%, 40%);
+}
+
+#lstBox1,
+#lstBox2 {
+    height: 300px;
+    width: 200px;
+    padding: 10px;
+}
+#lstBox1 option,
+#lstBox2 option{
+    margin-top: 5px !important;
+}
+.approveTermsContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.transferBtns {
+    margin: 5px !important;
+}
+
+.transferBtns {
+    float: left;
+    align-self: center;
+}
+.transferBtns #btnRight,
+.transferBtns #btnLeft{
+    border: none !important;
+    background-color: white !important;
 }
 @media only screen and (max-width: 767px) {
     .rightbutton {
@@ -208,5 +296,14 @@ body {
 
     .blocking {
         display: none !important;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+
+    #lstBox1,
+    #lstBox2 {
+        height: 300px;
+        width: 150px !important;
     }
 }
