--- a/HTML/CSS/HomeGrid.css
+++ b/HTML/CSS/HomeGrid.css
@@ -566,6 +566,15 @@
     background: rgb(0, 0, 0.5);
 }
 
+
+.EPfooterline {
+    border-bottom: 0.5px solid #D9D9D9;
+    margin-top: 50px;
+}
+
+.EPprivacypolicy {
+    font-size: 12px;
+}
 @media only screen and (min-width: 992px) {
     .likeBox {
         color: white;
