--- a/HTML/CSS/HomeList.css
+++ b/HTML/CSS/HomeList.css
@@ -14,6 +14,14 @@
     border-radius: 50%;
 
 }
+.EPfooterline {
+    border-bottom: 0.5px solid #D9D9D9;
+    margin-top: 50px;
+}
+
+.EPprivacypolicy {
+    font-size: 12px;
+}
 
 .rightHeader {
     flex-direction: row;
