--- a/HTML/CSS/VolunteeringTimesheet.css
+++ b/HTML/CSS/VolunteeringTimesheet.css
@@ -124,11 +124,80 @@ body {
 .table>thead>tr>th {
     border: 0 !important;
 }
+
 .table>tbody>tr>th,
-    .table>thead>tr>td,
-    .table>thead>tr>th {
-        font-size: 13px !important;
-    }
+.table>thead>tr>td,
+.table>thead>tr>th {
+    font-size: 13px !important;
+}
+
+.EPddborder {
+    border: 1.5px solid #D9D9D9;
+    width: 100%;
+    height: 28px !important;
+    padding: 4px !important;
+}
+
+.EPddborder img {
+    height: 8px;
+    width: 12px;
+    margin-top: 3px;
+}
+
+#birthday {
+    width: 100%;
+    border: 1px solid #d9d9d9;
+    border-radius: 3px;
+}
+
+.margin2 {
+    margin-top: 4px !important;
+    margin-left: 5px;
+}
+
+.modal-header {
+    border: none !important;
+}
+
+.modal-footer {
+    border: none !important;
+}
+
+.modal-body {
+    padding-top: 0 !important;
+}
+
+.modal-footer .cancel {
+    border: 2px solid #333333;
+    border-radius: 25px;
+}
+
+.modal-footer .changepass {
+    color: #F88634;
+    border: 2px solid #F88634;
+    border-radius: 25px;
+}
+
+.modal-dialog {
+    margin: 10px auto !important;
+    max-width: none !important;
+    width: 60vw !important;
+}
+
+.modal-body p {
+    margin-bottom: 0 !important;
+    margin-left: 10px !important;
+    font-weight: 100;
+}
+
+.modal-content {
+    margin-top: 20% !important;
+}
+
+.textarea {
+    padding: 5px !important;
+}
+
 
 @media only screen and (max-width: 767px) {
     .rightbutton {
