--- a/HTML/CSS/Admin.css
+++ b/HTML/CSS/Admin.css
@@ -8,36 +8,143 @@ body {
     padding: 0;
 
 }
-.sidebar{
-    background-color: #F88634 ;
+
+.sidebar {
+    background-color: #F88634;
 }
-#menu{
+
+#menu {
     width: 100%;
 }
+
 .nav>li>a {
     position: relative;
     display: block;
     padding: 10px 4px !important;
 }
+
 .nav-item {
     width: 100%;
 }
-.nav .nav-item:hover{
-    background-color:white !important;
-    color: #F88634 !important;
-}
-.nav-item i{
-    color: white;
-}
-.nav-item:hover{
-    color: #F88634 !important;
-    background-color: blue !important;
-}
 
-.sidebarbuttons{
+.nav-item i {
     color: white;
 }
 
+.nav-item :hover {
+    color: #F88634 !important;
+    background-color: rgb(255, 255, 255) !important;
+}
+
+
+.sidebarbuttons {
+    color: white;
+}
+
+.headerbar {
+    font-size: 10px;
+    
+}
+.headerborder {
+    margin-top: 10px;
+    border-bottom: 2px solid #00000014;
+}
+
+.EPbasicInfo {
+    font-size: 18px;
+    font-weight: 400;
+    border-bottom: 0.5px solid #D9D9D9;
+    margin-top: 12px;
+}
+.dataTables_length,
+.dataTables_filter,
+.dataTables_info{
+    display: none;
+}
+.searchBoxPh{
+    border: 0;
+}
+.table{
+    margin-top: 15px;
+    border: 1px solid #D9D9D9;
+}
+td button{
+    background-color: white !important;
+    border: none !important;
+}
+.table td,tr{
+    font-size: 15px;
+}
+
+.addbutton {
+    color: #F88634;
+    border: 2px solid #F88634;
+    border-radius: 25px;
+    margin-top: 20px;
+    padding-left: 5px;
+    padding-right: 8px;
+    background-color: white;
+}
+.EPbasicInfo p {
+    border-bottom: 2px solid #D9D9D9;
+    max-width: fit-content;
+    margin-bottom: 0;
+}
+.searchBoxborder{
+    margin-top: 20px;
+    border: 1px solid #D9D9D9;
+}
+.userimage {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.ddimage img{
+    width: 17px;
+    height: 12px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.dropdown-toggle::after {
+    display: none !important;
+}
+
+li {
+    list-style-type: none !important;
+}
+.pagination>li>a{
+    color: #757575 !important;
+    margin-left: 8px !important;
+}
+.dataTables_wrapper{
+    margin-top: 15px !important;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button.current{
+    background: none !important;
+    background-color: #F88634 !important;
+    color: #F88634 !important;
+    border: 1px solid #757575;
+}
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:hover{
+    /* background: none !important; */
+    /* background-color: white !important; */
+    color: #ffffff !important;
+    border: 1px solid #757575;
+}
 @media only screen and (max-width: 767px) {
-
+    .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{
+        padding: 1px !important;
+        font-size: 8px !important;
+    }
+    .addbutton {
+        font-size: 10px;
+    }
+    .searchboxh2{
+        font-size: 12px;
+    }
 }
